# solidity-verifier

./: .gitignore  Cargo.toml  README.md  ci_pasta_keys_verifier_script.py  compressed-snark-grumpkin.json  compressed-snark-parser.py  compressed-snark.json  foundry.toml  generate_contract_input.py  grumpkin_json_generator.py  integration-tests-generator.py  loader.py  loaderGrumpkin.py  loaderGrumpkinAssembly.py  loaderPasta.py  loaderZeromorph.py  neptune-constants-U24-pallas.json  neptune-constants-U24-vesta.json  neptune-constants-U24.json  nifs-expected-loader.py  pp-compressed-snark.json  proofGrumpkin.txt  remappings.txt  rust-reference-info.env  rust-reference-info.txt  sqrt.py  state-modifier.py  testresult  vk-parser.py
json/: nova-nondet-compressed-snark.json  nova-nondet-metadata.json  nova-nontrivial-metadata.json
script/: Deployment.s.sol  PastaInteraction.s.sol  Spark.s.sol  WriteData.s.sol
src/: AssemblyGrumpkin.sol  Field.sol  NovaVerifierAbstractions.sol  NovaVerifierContract.sol  NovaVerifierContractGrumpkin.sol  NovaVerifierContractPasta.sol  NovaVerifierContractZeromorph.sol  Polynomial.sol  SparkMultiEvaluationContract.sol  Utilities.sol  nifs.sol  sumcheck.sol
src/poseidon/neptune-constants-generator/: Cargo.toml
src/poseidon/neptune-constants-generator/src/: main.rs
test/: eq-evaluation-tests.t.sol  field-tests.t.sol  folding-verifier-tests.t.sol  grumpkin-curves-tests.t.sol  hyperkzg.t.sol  identity-poly-evaluation-tests.t.sol  inner-product-argument-tests.sol  ipa-3-var-generated.t.sol  ipa-4-var-generated.t.sol  ipa.t.sol  utils.t.sol  (+21 more)
(+102 files in other folders)
