[package]
name = "neptune-constants-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neptune = "9.0.0"
generic-array = "0.14.7"
blstrs = "0.7.0"
clap = { version = "4.2.4", features = ["derive"] }
serde_json = "1.0.96"
